--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,6 @@
     "express-async-handler": "^1.2.0",
     "mongoose": "^8.16.0",
     "multer": "^2.0.1"
-  }
+  },
+  "packageManager": "pnpm@9.9.0+sha1.3edbe440f4e570aa8f049adbd06b9483d55cc2d2"
 }
